apps/immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "immich.png"
    gethomepage.dev/description: "Photos"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=immich,app.kubernetes.io/name=server"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-immich
  hostnames:
    - immich.stevevaradi.me
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
